# kdeai

./: SPEC.md  pyproject.toml
kdeai/: apply.py  cli.py  config.py  constants.py  db.py  doctor.py  embed_client.py  examples.py  gc.py  glossary.py  hash.py  llm.py  llm_provider.py  locks.py  math_utils.py  plan.py  po_model.py  po_utils.py  project.py  prompt.py  reference.py  retrieve_examples.py  retrieve_tm.py  snapshot.py  sqlite_vector.py  state.py  tm_types.py  validate.py  workspace_tm.py
kdeai/utils/: win32.py
tests/: conftest.py  test_apply.py  test_cli_translate.py  test_cli_utils.py  test_db.py  test_embed_client.py  test_examples.py  test_examples_build_rows.py  test_examples_realistic.py  test_glossary.py  test_glossary_cli.py  test_hash.py  test_llm.py  test_llm_provider.py  test_plan.py  test_plan_skip_action.py  test_po_model.py  test_po_utils.py  test_prompt.py  test_reference.py  test_safety.py  test_sqlite_vector.py  test_state.py  test_tm.py  test_validate.py
tests/playground2/: katefiletree.po
